--- a/_posts/2007-09-23-episode-5.md
+++ b/_posts/2007-09-23-episode-5.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Episode #5"
 date: 2007-09-23 00:00:00
-file: http://cdn.tychi.me/dwmpp/dwmpp5.m4a
+file: //cdn.tychi.me/dwmpp/dwmpp5.m4a
 duration: "11:04"
 ---
 
