--- a/_posts/2006-12-28-episode-1.md
+++ b/_posts/2006-12-28-episode-1.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Episode #1"
 date: 2006-12-28 00:00:00
-file: http://cdn.tychi.me/dwmpp/dwmpp1.m4a
+file: //cdn.tychi.me/dwmpp/dwmpp1.m4a
 duration: "10:24"
 ---
 
