--- a/_posts/2007-02-19-episode-2.md
+++ b/_posts/2007-02-19-episode-2.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Episode #2"
 date: 2007-02-19 00:00:00
-file: http://cdn.tychi.me/dwmpp/dwmpp2.m4a
+file: //cdn.tychi.me/dwmpp/dwmpp2.m4a
 duration: "7:46"
 ---
 
