--- a/_posts/2007-06-09-episode-3.md
+++ b/_posts/2007-06-09-episode-3.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Episode #3"
 date: 2007-06-09 00:00:00
-file: http://cdn.tychi.me/dwmpp/dwmpp3.m4a
+file: //cdn.tychi.me/dwmpp/dwmpp3.m4a
 duration: "11:50"
 ---
 
