--- a/_posts/2007-09-01-episode-4.md
+++ b/_posts/2007-09-01-episode-4.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Episode #4"
 date: 2007-09-01 00:00:00
-file: http://cdn.tychi.me/dwmpp/dwmpp4.m4a
+file: //cdn.tychi.me/dwmpp/dwmpp4.m4a
 duration: "11:16"
 ---
 
