--- a/_posts/2012-05-15-episode-6.md
+++ b/_posts/2012-05-15-episode-6.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Episode #6"
 date: 2012-05-15 00:00:00
-file: http://cdn.tychi.me/dwmpp/dwmpp6.mp3
+file: //cdn.tychi.me/dwmpp/dwmpp6.mp3
 duration: "10:32"
 ---
 
